@@ -36,28 +36,25 @@ vc1::frame_header_t::init() {
   memset(this, 0, sizeof(vc1::frame_header_t));
 }
 
-vc1::frame_t::frame_t()
-  : timecode(-1)
-  , duration(0)
-  , contains_sequence_header(false)
-  , contains_field(false)
+vc1::frame_t::frame_t(frame_header_t const &p_header)
+  : header{p_header}
 {
+  init();
 }
 
 void
 vc1::frame_t::init() {
-  header.init();
   data.reset();
-  timecode                 = -1;
-  duration                 = 0;
-  contains_sequence_header = false;
-  contains_field           = false;
+  timecode             = -1;
+  duration             = 0;
+  contains_field       = false;
+  contains_entry_point = false;
 }
 
 bool
 vc1::frame_t::is_key()
   const {
-  return contains_sequence_header || (vc1::FRAME_TYPE_I == header.frame_type);
+  return contains_entry_point || (header.frame_type == FRAME_TYPE_I);
 }
 
 bool
@@ -233,31 +230,31 @@ vc1::parse_frame_header(const unsigned char *buf,
 
     bc.skip_bits(32);           // marker
 
-    if (seqhdr.interlace_flag)
-      frame_header.fcm = bc.get_012();
+    auto field_mode = false;
 
-    switch (bc.get_unary(false, 4)) {
-      case 0:
-        fh.frame_type = vc1::FRAME_TYPE_P;
-        break;
+    if (seqhdr.interlace_flag) {
+      fh.fcm     = bc.get_012();
+      field_mode = fh.fcm == FCM_ILACE_FIELD;
+    }
 
-      case 1:
-        fh.frame_type = vc1::FRAME_TYPE_B;
-        break;
+    if (field_mode) {
+      // Only set frame type to I for actual I/I fields. This is only
+      // used for key frame determination, so gloss over the actual
+      // field type differences.
+      auto type     = bc.get_bits(3);
+      fh.frame_type = 0 == type ? FRAME_TYPE_I : FRAME_TYPE_P;
 
-      case 2:
-        fh.frame_type = vc1::FRAME_TYPE_I;
-        break;
-
-      case 3:
-        fh.frame_type = vc1::FRAME_TYPE_BI;
-        break;
-
-      default:
+    } else {
+      auto type = bc.get_unary(false, 4);
+      if (type >= 4) {
         fh.frame_type = vc1::FRAME_TYPE_P_SKIPPED;
         memcpy(&frame_header, &fh, sizeof(vc1::frame_header_t));
 
         return true;
+      }
+
+      static frame_type_e s_type_map[4] = { vc1::FRAME_TYPE_P, vc1::FRAME_TYPE_B, vc1::FRAME_TYPE_I, vc1::FRAME_TYPE_BI };
+      fh.frame_type = s_type_map[type];
     }
 
     if (seqhdr.tf_counter_flag)
@@ -430,11 +427,9 @@ vc1::es_parser_c::handle_frame_packet(memory_cptr packet) {
   if (!vc1::parse_frame_header(packet->get_buffer(), packet->get_size(), frame_header, m_seqhdr))
     return;
 
-  m_current_frame        = frame_cptr(new frame_t);
+  m_current_frame        = std::make_shared<frame_t>(frame_header);
   m_current_frame->data  = packet;
   m_current_frame->data->grab();
-
-  memcpy(&m_current_frame->header, &frame_header, sizeof(frame_header_t));
 
   if (!m_timecodes.empty())
     mxverb(2,
@@ -528,8 +523,8 @@ vc1::es_parser_c::combine_extra_data_with_packet() {
     memcpy(ptr, mem->get_buffer(), mem->get_size());
     ptr += mem->get_size();
 
-    if (VC1_MARKER_SEQHDR == get_uint32_be(mem->get_buffer()))
-      m_current_frame->contains_sequence_header = true;
+    if (get_uint32_be(mem->get_buffer()) == VC1_MARKER_ENTRYPOINT)
+      m_current_frame->contains_entry_point = true;
   }
 
   memcpy(ptr, m_current_frame->data->get_buffer(), m_current_frame->data->get_size());
